crates/rskim-core/tests/snapshots/truncation_golden__python_simple_pseudo_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(PYTHON_SIMPLE, Language::Python,\nTransformConfig::with_mode(Mode::Pseudo).with_max_lines(5))"
---
"""
FIXTURE: Simple Python functions
TESTS: Basic function signature extraction
"""
