crates/rskim-core/tests/snapshots/truncation_golden__python_simple_pseudo_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(PYTHON_SIMPLE, Language::Python,\nTransformConfig::with_mode(Mode::Pseudo))"
---
"""
FIXTURE: Simple Python functions
TESTS: Basic function signature extraction
"""

def calculate_sum(a, b) -> int:
    """Calculate sum of two numbers"""
    result = a + b
    return result

def greet_user(name) -> str:
    """Greet a user by name"""
    message = f"Hello, {name}!"
    return message

class Calculator:
    def add(x, y) -> int:
        return x + y

    def multiply(x, y) -> int:
        return x * y
