crates/rskim-core/tests/snapshots/truncation_golden__python_simple_signatures_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(PYTHON_SIMPLE, Language::Python,\nTransformConfig::with_mode(Mode::Signatures))"
---
def calculate_sum(a: int, b: int) -> int:
def greet_user(name: str) -> str:
def add(self, x: int, y: int) -> int:
def multiply(self, x: int, y: int) -> int:
