crates/rskim-core/tests/snapshots/truncation_golden__python_simple_structure_last10.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(PYTHON_SIMPLE, Language::Python,\nTransformConfig::with_mode(Mode::Structure).with_last_lines(10))"
---
# ... (12 lines above)
def greet_user(name: str) -> str:
     {...}

class Calculator:
    def add(self, x: int, y: int) -> int:
         {...}

    def multiply(self, x: int, y: int) -> int:
         {...}
