crates/rskim-core/tests/snapshots/truncation_golden__python_simple_structure_max15.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(PYTHON_SIMPLE, Language::Python,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(15))"
---
# ... (5 lines truncated)
def calculate_sum(a: int, b: int) -> int:
     {...}
# ... (3 lines truncated)
def greet_user(name: str) -> str:
     {...}
# ... (3 lines truncated)
class Calculator:
    def add(self, x: int, y: int) -> int:
         {...}

    def multiply(self, x: int, y: int) -> int:
         {...}
