crates/rskim-core/tests/snapshots/truncation_golden__python_simple_structure_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(PYTHON_SIMPLE, Language::Python,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(5))"
---
# ... (15 lines truncated)
class Calculator:
    def add(self, x: int, y: int) -> int:
         {...}
# ... (3 lines truncated)
