crates/rskim-core/tests/snapshots/truncation_golden__python_simple_types_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(PYTHON_SIMPLE, Language::Python, TransformConfig::with_mode(Mode::Types))"
---
class Calculator:
