crates/rskim-core/tests/snapshots/truncation_golden__rust_comments_pseudo_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(RUST_COMMENTS, Language::Rust,\nTransformConfig::with_mode(Mode::Pseudo).with_max_lines(5))"
---
//! Module-level doc comment (KEEP)
//! This describes the module (KEEP)

/// Function doc comment (KEEP)
// ... (47 lines truncated)
