crates/rskim-core/tests/snapshots/truncation_golden__rust_comments_structure_max15.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(RUST_COMMENTS, Language::Rust,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(15))"
---
// ... (11 lines truncated)
pub fn add(a: i32, b: i32) -> i32  {...}
// ... (8 lines truncated)
pub struct Calculator {
    /// Field doc comment (KEEP)
    value: i32,
}
// ... (27 lines truncated)
